deployments/k8s/AWS/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reaperc2-deployment
  labels:
    app: reaperc2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reaperc2-deployment
  template:
    metadata:
      labels:
        app: reaperc2-deployment
    spec:
      containers:
        - name: reaperc2-deployment
          image: 123456789012.dkr.ecr.us-east-1.amazonaws.com/reaperc2:latest
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: beacon
            - containerPort: 8443
              name: admin
          volumeMounts:
            - name: docdb-ca-volume
              mountPath: /etc/ssl/certs/rds-combined-ca-bundle.pem
              subPath: rds-combined-ca-bundle.pem
              readOnly: true
      volumes:
        - name: docdb-ca-volume
          configMap:
            name: docdb-ca-cert
      imagePullSecrets:
        - name: reaperc2-myregistrykey
